// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectRequest /> allows to navigate the list of options using the arrow keys 1`] = `
"❔   Select an option

 [34m❯[39m [34mItem 1[39m
   Item 2
   Item 3
"
`;

exports[`<SelectRequest /> allows to navigate the list of options using the arrow keys 2`] = `
"❔   Select an option

 [34m❯[39m [34mItem 1[39m
   Item 2
   Item 3
"
`;

exports[`<SelectRequest /> displays the list of options filtering by the text input 1`] = `
"❔   Select an option [7m [27m

 [34m❯[39m [34mItem 1[39m
   Item 2
   Item 3
"
`;

exports[`<SelectRequest /> displays the list of options filtering by the text input 2`] = `
"❔   Select an option 1[7m [27m

 [34m❯[39m [34mItem 1[39m
"
`;
